# table-assignment-ai

./: .gitignore  README.md  pyproject.toml
data/: main_table_data.csv
src/table_assignment_ai/: __init__.py
src/table_assignment_ai/generate/: change_key.py  main_table.py
