[project]
name = "table-assignment-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hiroaki222", email = "hiroaki.takahara.222@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/table_assignment_ai"]
