[project]
name = "table-assignment-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hiroaki222", email = "hiroaki.takahara.222@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "faker>=33.0.0",
    "matplotlib>=3.9.2",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/table_assignment_ai"]
